<resources>
    <string name="app_name">Student Attend</string>
    <string name="attendance">Attendance</string>
    <string name="search_student">Search Student</string>
    <string name="add_student">Add Student</string>
    <string name="add_student_tital">Add Student</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_department">Enter Department</string>
    <string name="enter_id_no">Enter ID No</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="save_button">Save</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dd_mm_year">DD/MM/Year</string>
</resources>